Fixes 2 layout bugs - Edit button on public pages when logged in positioned better - No public lists have the public list message removed

--- a/css/styles.css
+++ b/css/styles.css
@@ -533,7 +533,7 @@ width:290px;
 }
 
  form.edit-list {
- margin-left:13px;
+ margin:10px 0 0 13px;
  width:400px;
  }
  
